--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@canopassoftware/vue-file-upload": "^1.0.8",
     "@vueuse/core": "^10.11.0",
     "axios": "^1.7.2",
     "pinia": "^2.1.7",
